2003-03-18  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/configure.in, src/configure: Update with "1.100.1" version
	number for now.

	* test/roundtrip.cpp (main): Improve usability by making BOX and
	SMI file types special cases. (Hard to compare atoms and coords
	for them.)

	* src/pdb.cpp (WritePDB): Make sure two-character elements end up
	in the correct columns even with residue information.
	(ReadPDB): Refer to the original text (with spaces) before
	deciding if an atom type is a two-character element or a one-char
	element.

	* src/*.h, *.cpp: Switch from float to double throughout. Improves
	accuracy significantly in coordinate transformations.

	* src/binary.cpp (PackCoordinate, UnpackCoordinate): Make sure to
	cast to float before packing for compatibility with file format.

2003-03-17  Geoff Hutchison  <hutchisn@chem.northwestern.edu>
	
	* src/cml.cpp: Fix unused declarations that cause problems with
	the xlC compiler reported by Markku Laukkanen.

	* src/pdb.cpp (WritePDB): Make sure strings are null-terminated
	and convert element name to upper-case for the column 77-78 entry.

2003-03-15  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/cacao.cpp (SetHilderbrandt): Fix one coredump found on
	roundtrip testing and add notes on what needs to be fixed for an
	iron-clad version of this.

	* src/hin.cpp (ReadHIN): Fix bugs uncovered in latest roundtrip
	testing. Some lines are exactly 11 tokens long and this should not
	stop the parsing.

	* src/viewmol.cpp (ReadViewMol): Remove loop attempting to find
	the first part of the file -- causes problems since two lines
	instead of one are read off the top.

2003-03-14  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* test/roundtrip.cpp: Detect cases where files have no atoms.

	* test/Makefile.in: Add targets to create roundtrip program.

	* src/cacao.cpp (ReadCaccrt): Add an obUnitCell object to the
	molecule for keeping track of unit cell data. Call