@@ -1,0 +1,53 @@
+/***************************************************************
+This file is part of the Open Babel project.
+This is copyright under the GNU General Public License (GPL)
+For more information, see <http://openbabel.sourceforge.net/>
+
+This file contains a binary representation of data tables
+ used by Open Babel. It is used as a fallback if the textual
+ data table is not found at runtime. It is not a normal header.
+***************************************************************/
+
+
+#ifndef OB_BONDTYP_H
+#define OB_BONDTYP_H
+
+namespace OpenBabel
+{
+static const char BondTypeData[] = {
+ 0x5B,0x23,0x37,0x44,0x32,0x5D,0x5B,0x23,0x37,0x44,0x32,0x5D,0x5B,0x23,0x37,
+ 0x44,0x31,0x5D,0x09,0x09,0x30,0x20,0x31,0x20,0x32,0x20,0x31,0x20,0x32,0x20,
+ 0x32,0x0A,0x5B,0x23,0x38,0x44,0x31,0x5D,0x5B,0x23,0x37,0x44,0x33,0x5D,0x5B,
+ 0x23,0x38,0x44,0x31,0x5D,0x09,0x09,0x30,0x20,0x31,0x20,0x32,0x20,0x31,0x20,
+ 0x32,0x20,0x32,0x0A,0x5B,0x23,0x31,0x36,0x44,0x34,0x5D,0x28,0x5B,0x23,0x38,
+ 0x44,0x31,0x5D,0x29,0x28,0x5B,0x23,0x38,0x44,0x31,0x5D,0x29,0x28,0x2A,0x29,
+ 0x28,0x2A,0x29,0x09,0x30,0x20,0x31,0x20,0x32,0x20,0x30,0x20,0x32,0x20,0x32,
+ 0x20,0x30,0x20,0x33,0x20,0x31,0x20,0x30,0x20,0x34,0x20,0x31,0x0A,0x5B,0x23,
+ 0x31,0x35,0x44,0x34,0x5D,0x28,0x5B,0x23,0x38,0x44,0x31,0x5D,0x29,0x28,0x2A,
+ 0x29,0x28,0x2A,0x29,0x28,0x2A,0x29,0x09,0x30,0x20,0x31,0x20,0x32,0x20,0x30,
+ 0x20,0x32,0x20,0x31,0x20,0x30,0x20,0x33,0x20,0x31,0x20,0x30,0x20,0x34,0x20,
+ 0x31,0x0A,0x5B,0x23,0x38,0x44,0x31,0x5D,0x5B,0x23,0x36,0x44,0x33,0x5D,0x5B,
+ 0x23,0x38,0x5D,0x09,0x09,0x30,0x20,0x31,0x20,0x32,0x20,0x31,0x20,0x32,0x20,
+ 0x31,0x0A,0x5B,0x23,0x36,0x44,0x33,0x5D,0x28,0x5B,0x23,0x38,0x44,0x31,0x5D,
+ 0x29,0x5B,0x23,0x37,0x5D,0x09,0x09,0x30,0x20,0x31,0x20,0x32,0x20,0x30,0x20,
+ 0x32,0x20,0x31,0x0A,0x5B,0x23,0x38,0x44,0x31,0x5D,0x5B,0x23,0x33,0x34,0x44,
+ 0x33,0x5D,0x5B,0x23,0x38,0x5D,0x09,0x09,0x30,0x20,0x31,0x20,0x32,0x20,0x31,
+ 0x20,0x32,0x20,0x31,0x0A,0x5B,0x23,0x36,0x44,0x33,0x5D,0x28,0x5B,0x23,0x38,
+ 0x44,0x31,0x5D,0x29,0x5B,0x23,0x31,0x36,0x5D,0x09,0x09,0x30,0x20,0x31,0x20,
+ 0x32,0x20,0x30,0x20,0x32,0x20,0x31,0x0A,0x5B,0x23,0x36,0x44,0x33,0x5D,0x28,
+ 0x5B,0x23,0x31,0x36,0x44,0x31,0x5D,0x29,0x5B,0x23,0x31,0x36,0x5D,0x09,0x09,
+ 0x30,0x20,0x31,0x20,0x32,0x20,0x30,0x20,0x32,0x20,0x31,0x0A,0x5B,0x23,0x36,
+ 0x44,0x33,0x5D,0x28,0x5B,0x23,0x31,0x36,0x44,0x31,0x5D,0x29,0x5B,0x23,0x37,
+ 0x5D,0x09,0x09,0x30,0x20,0x31,0x20,0x32,0x20,0x30,0x20,0x32,0x20,0x31,0x0A,
+ 0x5B,0x23,0x36,0x44,0x33,0x5D,0x5B,0x23,0x36,0x44,0x32,0x5D,0x5B,0x23,0x36,
+ 0x44,0x33,0x5D,0x09,0x09,0x30,0x20,0x31,0x20,0x32,0x20,0x31,0x20,0x32,0x20,
+ 0x32,0x0A,0x5B,0x23,0x36,0x44,0x33,0x5D,0x5B,0x23,0x37,0x44,0x31,0x5D,0x5B,
+ 0x23,0x37,0x44,0x31,0x5D,0x09,0x20,0x20,0x20,0x20,0x20,0x20,0x20,0x20,0x30,
+ 0x20,0x31,0x20,0x32,0x20,0x30,0x20,0x32,0x20,0x31,0x0A,0x5B,0x23,0x37,0x44,
+ 0x32,0x5D,0x5B,0x23,0x36,0x44,0x33,0x5D,0x28,0x5B,0x23,0x37,0x44,0x32,0x5D,
+ 0x29,0x5B,0x23,0x37,0x44,0x32,0x5D,0x09,0x30,0x20,0x31,0x20,0x31,0x20,0x31,
+ 0x20,0x32,0x20,0x32,0x20,0x31,0x20,0x33,0x20,0x31,0x0A,0x00};
+
+} // namespace OpenBabel
+#endif // OB_BONDTYP_H
+
